--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -370,7 +370,26 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		height:184px;
 		@include grid(3);
 		width:230px;
-		
+		.content{
+			.header
+			{
+				height:54px;
+				margin-top:10px;
+				@include grid(3);
+				@include alpha;
+				@include omega;
+				width:230px;
+				font-weight: bold;
+				a{
+					text-decoration:none;
+					font-weight: bold;
+					color:#000;
+				}a:hover{
+					color:#fff;
+					background-color:#000;
+				}
+			}
+		}
 		.header
 		{
 			height:54px;
@@ -384,7 +403,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		a{
 			text-decoration:none;
 			font-weight: bold;
-			color:#000;
+			color:#448;
 		}a:hover{
 			color:#fff;
 			background-color:#000;
