--- a/app/views/bookings/_form.html.slim
+++ b/app/views/bookings/_form.html.slim
@@ -2,7 +2,7 @@
   -if @booking.errors.any?
     h4 
      .color_allert
-       | Ikke alle feldter er udfyldt korekt
+       | Ikke alle felter er udfyldt korekt
 
   .grid-6.alpha
  
