clearfix added to companies/show

--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -31,6 +31,6 @@
           | - 
         .tlf-content 
           =raw @link
-
+.clearfix
 br
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
