--- a/app/views/shared/_news.html.slim
+++ b/app/views/shared/_news.html.slim
@@ -8,21 +8,20 @@
               | NYHEDER
       - newsposts.each do |newspost|
         .news
-          .content
-            .header
-              h1
-                = link_to newspost.title, newspost
-              .gray
-                = l newspost.created_at, :format => :date_month_and_year
-            =raw excerpt(newspost.body, '', :radius => 160)
-            br /
-            - if newspost.body != nil && newspost.body.length > 160
-              = link_to 'læs mere', newspost_path(newspost)
-
-            - if can?(:edit, newspost)
-              - if newspost.body != nil
-                - if newspost.body.length > 160
-                  |  | 
-                = link_to 'rediger', edit_newspost_path(newspost)
-= will_paginate @newsposts
+          
+          .header
+            h1 = link_to newspost.title, newspost
+            .gray
+              = l newspost.created_at, :format => :date_month_and_year
+          =raw excerpt(newspost.body, '', :radius => 160)
+          br /
+          - if newspost.body != nil && newspost.body.length > 160
+            = link_to 'læs mere', newspost_path(newspost)
+          
+          - if can?(:edit, newspost)
+            - if newspost.body != nil
+              - if newspost.body.length > 160
+                |  | 
+              = link_to 'rediger', edit_newspost_path(newspost)
+= will_paginate newsposts
 
