--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -728,7 +728,11 @@ footer, header, hgroup, menu, nav, section {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 369, ../../../app/assets/stylesheets/grid.scss */
+/* line 368, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news-box {
+  width: 200px;
+}
+/* line 372, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -737,33 +741,29 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 10px;
   width: 220px;
   width: 230px;
+  /*	.content{
+  		.header
+  		{
+  			height:54px;
+  			margin-top:10px;
+  			@include grid(3);
+  			@include alpha;
+  			@include omega;
+  			width:230px;
+  			font-weight: bold;
+  			a{
+  				text-decoration:none;
+  				font-weight: bold;
+  				color:#000;
+  			}a:hover{
+  				color:#fff;
+  				background-color:#000;
+  			}
+  		}
+  	}
+  	*/
 }
-/* line 375, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header {
-  height: 54px;
-  margin-top: 10px;
-  display: inline;
-  float: left;
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 220px;
-  margin-left: 0;
-  margin-right: 0;
-  width: 230px;
-  font-weight: bold;
-}
-/* line 383, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #000;
-}
-/* line 387, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .content .header a:hover {
-  color: #fff;
-  background-color: #000;
-}
-/* line 394, ../../../app/assets/stylesheets/grid.scss */
+/* line 398, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -777,50 +777,61 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 403, ../../../app/assets/stylesheets/grid.scss */
+/* line 406, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .header a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .header a:hover {
+  color: #fff;
+  background-color: #000;
+}
+/* line 415, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #448;
 }
-/* line 407, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 411, ../../../app/assets/stylesheets/grid.scss */
+/* line 423, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 416, ../../../app/assets/stylesheets/grid.scss */
+/* line 428, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 419, ../../../app/assets/stylesheets/grid.scss */
+/* line 431, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 425, ../../../app/assets/stylesheets/grid.scss */
+/* line 437, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 429, ../../../app/assets/stylesheets/grid.scss */
+/* line 441, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 431, ../../../app/assets/stylesheets/grid.scss */
+/* line 443, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 436, ../../../app/assets/stylesheets/grid.scss */
+/* line 448, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -830,7 +841,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 441, ../../../app/assets/stylesheets/grid.scss */
+/* line 453, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -841,19 +852,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 448, ../../../app/assets/stylesheets/grid.scss */
+/* line 460, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 453, ../../../app/assets/stylesheets/grid.scss */
+/* line 465, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 458, ../../../app/assets/stylesheets/grid.scss */
+/* line 470, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -864,29 +875,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 463, ../../../app/assets/stylesheets/grid.scss */
+/* line 475, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 469, ../../../app/assets/stylesheets/grid.scss */
+/* line 481, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 472, ../../../app/assets/stylesheets/grid.scss */
+/* line 484, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 473, ../../../app/assets/stylesheets/grid.scss */
+/* line 485, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 477, ../../../app/assets/stylesheets/grid.scss */
+/* line 489, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -899,14 +910,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 485, ../../../app/assets/stylesheets/grid.scss */
+/* line 497, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 492, ../../../app/assets/stylesheets/grid.scss */
+/* line 504, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -916,7 +927,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 501, ../../../app/assets/stylesheets/grid.scss */
+/* line 513, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -927,7 +938,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 512, ../../../app/assets/stylesheets/grid.scss */
+/* line 524, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -936,7 +947,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 516, ../../../app/assets/stylesheets/grid.scss */
+/* line 528, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -951,7 +962,7 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 529, ../../../app/assets/stylesheets/grid.scss */
+/* line 541, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
@@ -961,7 +972,7 @@ a:hover {
   height: 40px;
 }
 
-/* line 539, ../../../app/assets/stylesheets/grid.scss */
+/* line 551, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -972,21 +983,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 545, ../../../app/assets/stylesheets/grid.scss */
+/* line 557, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 554, ../../../app/assets/stylesheets/grid.scss */
+/* line 566, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 560, ../../../app/assets/stylesheets/grid.scss */
+/* line 572, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -996,7 +1007,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 564, ../../../app/assets/stylesheets/grid.scss */
+/* line 576, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1005,7 +1016,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 568, ../../../app/assets/stylesheets/grid.scss */
+/* line 580, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1013,7 +1024,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 571, ../../../app/assets/stylesheets/grid.scss */
+/* line 583, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1021,7 +1032,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 574, ../../../app/assets/stylesheets/grid.scss */
+/* line 586, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1029,7 +1040,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 577, ../../../app/assets/stylesheets/grid.scss */
+/* line 589, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1040,19 +1051,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 584, ../../../app/assets/stylesheets/grid.scss */
+/* line 596, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 590, ../../../app/assets/stylesheets/grid.scss */
+/* line 602, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 592, ../../../app/assets/stylesheets/grid.scss */
+/* line 604, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1064,41 +1075,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 598, ../../../app/assets/stylesheets/grid.scss */
+/* line 610, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 605, ../../../app/assets/stylesheets/grid.scss */
+/* line 617, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 607, ../../../app/assets/stylesheets/grid.scss */
+/* line 619, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 610, ../../../app/assets/stylesheets/grid.scss */
+/* line 622, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 613, ../../../app/assets/stylesheets/grid.scss */
+/* line 625, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 614, ../../../app/assets/stylesheets/grid.scss */
+/* line 626, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 616, ../../../app/assets/stylesheets/grid.scss */
+/* line 628, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 621, ../../../app/assets/stylesheets/grid.scss */
+/* line 633, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1110,36 +1121,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 627, ../../../app/assets/stylesheets/grid.scss */
+/* line 639, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 634, ../../../app/assets/stylesheets/grid.scss */
+/* line 646, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 636, ../../../app/assets/stylesheets/grid.scss */
+/* line 648, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 651, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 642, ../../../app/assets/stylesheets/grid.scss */
+/* line 654, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 643, ../../../app/assets/stylesheets/grid.scss */
+/* line 655, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 645, ../../../app/assets/stylesheets/grid.scss */
+/* line 657, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
