--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -677,7 +677,7 @@ footer, header, hgroup, menu, nav, section {
   width: 940px;
   background-color: #fff;
   margin-top: 22px;
-  /*	height:186px;*/
+  height: 186px;
   width: 940px;
   display: block;
 }
@@ -686,9 +686,8 @@ footer, header, hgroup, menu, nav, section {
   border-style: solid;
   border-width: 1px;
   height: 184px;
-  /*	display:inline;*/
 }
-/* line 342, ../../../app/assets/stylesheets/grid.scss */
+/* line 341, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -699,21 +698,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 349, ../../../app/assets/stylesheets/grid.scss */
+/* line 348, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 352, ../../../app/assets/stylesheets/grid.scss */
+/* line 351, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 353, ../../../app/assets/stylesheets/grid.scss */
+/* line 352, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 356, ../../../app/assets/stylesheets/grid.scss */
+/* line 355, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -724,21 +723,47 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 365, ../../../app/assets/stylesheets/grid.scss */
+/* line 364, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 371, ../../../app/assets/stylesheets/grid.scss */
+/* line 369, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
+  height: 184px;
   display: inline;
   float: left;
-  height: 184px;
   margin-left: 10px;
   margin-right: 10px;
-  width: 228px;
+  width: 220px;
+  width: 230px;
 }
-/* line 380, ../../../app/assets/stylesheets/grid.scss */
+/* line 375, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header {
+  height: 54px;
+  margin-top: 10px;
+  display: inline;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 220px;
+  margin-left: 0;
+  margin-right: 0;
+  width: 230px;
+  font-weight: bold;
+}
+/* line 383, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header a {
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+/* line 387, ../../../app/assets/stylesheets/grid.scss */
+.bottom-box .news .content .header a:hover {
+  color: #fff;
+  background-color: #000;
+}
+/* line 394, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -749,64 +774,53 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   margin-left: 0;
   margin-right: 0;
-  width: 228px;
+  width: 230px;
   font-weight: bold;
 }
-/* line 388, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .header a {
-  text-decoration: none;
-  font-weight: bold;
-  color: #000;
-}
-/* line 392, ../../../app/assets/stylesheets/grid.scss */
-.bottom-box .news .header a:hover {
-  color: #fff;
-  background-color: #000;
-}
-/* line 397, ../../../app/assets/stylesheets/grid.scss */
+/* line 403, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #448;
 }
-/* line 401, ../../../app/assets/stylesheets/grid.scss */
+/* line 407, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 405, ../../../app/assets/stylesheets/grid.scss */
+/* line 411, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 410, ../../../app/assets/stylesheets/grid.scss */
+/* line 416, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 413, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 422, ../../../app/assets/stylesheets/grid.scss */
+/* line 425, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 426, ../../../app/assets/stylesheets/grid.scss */
+/* line 429, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 428, ../../../app/assets/stylesheets/grid.scss */
+/* line 431, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 433, ../../../app/assets/stylesheets/grid.scss */
+/* line 436, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -816,7 +830,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 438, ../../../app/assets/stylesheets/grid.scss */
+/* line 441, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -827,19 +841,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 445, ../../../app/assets/stylesheets/grid.scss */
+/* line 448, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 450, ../../../app/assets/stylesheets/grid.scss */
+/* line 453, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 455, ../../../app/assets/stylesheets/grid.scss */
+/* line 458, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -850,29 +864,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 460, ../../../app/assets/stylesheets/grid.scss */
+/* line 463, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 466, ../../../app/assets/stylesheets/grid.scss */
+/* line 469, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 469, ../../../app/assets/stylesheets/grid.scss */
+/* line 472, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 470, ../../../app/assets/stylesheets/grid.scss */
+/* line 473, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 474, ../../../app/assets/stylesheets/grid.scss */
+/* line 477, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -885,14 +899,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 482, ../../../app/assets/stylesheets/grid.scss */
+/* line 485, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 489, ../../../app/assets/stylesheets/grid.scss */
+/* line 492, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -902,7 +916,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 498, ../../../app/assets/stylesheets/grid.scss */
+/* line 501, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -913,7 +927,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 509, ../../../app/assets/stylesheets/grid.scss */
+/* line 512, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -922,7 +936,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 513, ../../../app/assets/stylesheets/grid.scss */
+/* line 516, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -937,7 +951,7 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 526, ../../../app/assets/stylesheets/grid.scss */
+/* line 529, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
@@ -947,7 +961,7 @@ a:hover {
   height: 40px;
 }
 
-/* line 536, ../../../app/assets/stylesheets/grid.scss */
+/* line 539, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -958,21 +972,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 542, ../../../app/assets/stylesheets/grid.scss */
+/* line 545, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 551, ../../../app/assets/stylesheets/grid.scss */
+/* line 554, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 557, ../../../app/assets/stylesheets/grid.scss */
+/* line 560, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -982,7 +996,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 561, ../../../app/assets/stylesheets/grid.scss */
+/* line 564, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -991,7 +1005,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 565, ../../../app/assets/stylesheets/grid.scss */
+/* line 568, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -999,7 +1013,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 568, ../../../app/assets/stylesheets/grid.scss */
+/* line 571, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1007,7 +1021,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 571, ../../../app/assets/stylesheets/grid.scss */
+/* line 574, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1015,7 +1029,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 574, ../../../app/assets/stylesheets/grid.scss */
+/* line 577, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1026,19 +1040,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 581, ../../../app/assets/stylesheets/grid.scss */
+/* line 584, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 587, ../../../app/assets/stylesheets/grid.scss */
+/* line 590, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 589, ../../../app/assets/stylesheets/grid.scss */
+/* line 592, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1050,41 +1064,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 595, ../../../app/assets/stylesheets/grid.scss */
+/* line 598, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 602, ../../../app/assets/stylesheets/grid.scss */
+/* line 605, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 604, ../../../app/assets/stylesheets/grid.scss */
+/* line 607, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 607, ../../../app/assets/stylesheets/grid.scss */
+/* line 610, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 610, ../../../app/assets/stylesheets/grid.scss */
+/* line 613, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 611, ../../../app/assets/stylesheets/grid.scss */
+/* line 614, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 613, ../../../app/assets/stylesheets/grid.scss */
+/* line 616, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 618, ../../../app/assets/stylesheets/grid.scss */
+/* line 621, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1096,36 +1110,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 624, ../../../app/assets/stylesheets/grid.scss */
+/* line 627, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 631, ../../../app/assets/stylesheets/grid.scss */
+/* line 634, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 633, ../../../app/assets/stylesheets/grid.scss */
+/* line 636, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 636, ../../../app/assets/stylesheets/grid.scss */
+/* line 639, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 639, ../../../app/assets/stylesheets/grid.scss */
+/* line 642, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 640, ../../../app/assets/stylesheets/grid.scss */
+/* line 643, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 642, ../../../app/assets/stylesheets/grid.scss */
+/* line 645, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
