--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -19,8 +19,16 @@
 
 
       
-.squared-box.fixed-height
-  
-
+.squared-box
+  .borders.fixed-height
+    = image_tag @company.image.url(:preview), :border => 'none', :class => 'image_fix'
+    .tlf-box
+      .tlf-content
+        | T: 
+        = @company.phone
+      .tlf-content 
+        | - 
+      .tlf-content 
+        =raw @link
 br
 = render :partial => "shared/news", :locals => { :newsposts => @newsposts }
