--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -333,6 +333,7 @@ $ninesixty-gutter-width: 20px; // default: 20px
 	height:186px;
 	width:940px;
 	display:block;
+	float:left;
 
 	.borders{
 		border-style:solid;
