--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -682,14 +682,15 @@ footer, header, hgroup, menu, nav, section {
   height: 186px;
   width: 940px;
   display: block;
+  float: left;
 }
-/* line 337, ../../../app/assets/stylesheets/grid.scss */
+/* line 338, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 184px;
 }
-/* line 343, ../../../app/assets/stylesheets/grid.scss */
+/* line 344, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side {
   height: 184px;
   display: inline;
@@ -700,21 +701,21 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
   width: 168px;
 }
-/* line 350, ../../../app/assets/stylesheets/grid.scss */
+/* line 351, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box {
   width: 154px;
   height: 51px;
 }
-/* line 353, ../../../app/assets/stylesheets/grid.scss */
+/* line 354, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a {
   color: #fff;
 }
-/* line 354, ../../../app/assets/stylesheets/grid.scss */
+/* line 355, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .left-side .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 357, ../../../app/assets/stylesheets/grid.scss */
+/* line 358, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .right-side {
   height: 184px;
   display: inline;
@@ -725,12 +726,12 @@ footer, header, hgroup, menu, nav, section {
   margin-right: 0;
   width: 730px;
 }
-/* line 366, ../../../app/assets/stylesheets/grid.scss */
+/* line 367, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .booking-box {
   margin-top: 80px;
   margin-left: 20px;
 }
-/* line 371, ../../../app/assets/stylesheets/grid.scss */
+/* line 372, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news {
   height: 184px;
   display: inline;
@@ -740,7 +741,7 @@ footer, header, hgroup, menu, nav, section {
   width: 220px;
   width: 230px;
 }
-/* line 377, ../../../app/assets/stylesheets/grid.scss */
+/* line 378, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header {
   height: 54px;
   margin-top: 10px;
@@ -754,18 +755,18 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 385, ../../../app/assets/stylesheets/grid.scss */
+/* line 386, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a {
   text-decoration: none;
   font-weight: bold;
   color: #000;
 }
-/* line 389, ../../../app/assets/stylesheets/grid.scss */
+/* line 390, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content .header a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 396, ../../../app/assets/stylesheets/grid.scss */
+/* line 397, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .header {
   height: 54px;
   margin-top: 10px;
@@ -779,50 +780,50 @@ footer, header, hgroup, menu, nav, section {
   width: 230px;
   font-weight: bold;
 }
-/* line 405, ../../../app/assets/stylesheets/grid.scss */
+/* line 406, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a {
   text-decoration: none;
   font-weight: bold;
   color: #448;
 }
-/* line 409, ../../../app/assets/stylesheets/grid.scss */
+/* line 410, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news a:hover {
   color: #fff;
   background-color: #000;
 }
-/* line 413, ../../../app/assets/stylesheets/grid.scss */
+/* line 414, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news h1 {
   margin-bottom: 0px;
   height: 34px;
   color: #000;
 }
-/* line 418, ../../../app/assets/stylesheets/grid.scss */
+/* line 419, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .gray {
   color: #999;
 }
-/* line 421, ../../../app/assets/stylesheets/grid.scss */
+/* line 422, ../../../app/assets/stylesheets/grid.scss */
 .bottom-box .news .content {
   margin-top: 0px;
   width: 210px;
 }
 
-/* line 427, ../../../app/assets/stylesheets/grid.scss */
+/* line 428, ../../../app/assets/stylesheets/grid.scss */
 .text-right {
   text-align: right;
 }
 
-/* line 431, ../../../app/assets/stylesheets/grid.scss */
+/* line 432, ../../../app/assets/stylesheets/grid.scss */
 .grid-container {
   margin-left: auto;
   margin-right: auto;
   width: 960px;
 }
-/* line 433, ../../../app/assets/stylesheets/grid.scss */
+/* line 434, ../../../app/assets/stylesheets/grid.scss */
 .grid-container .top-margin {
   margin-top: 32px;
 }
 
-/* line 438, ../../../app/assets/stylesheets/grid.scss */
+/* line 439, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room {
   display: inline;
   float: left;
@@ -832,7 +833,7 @@ footer, header, hgroup, menu, nav, section {
   margin-left: 0;
 }
 
-/* line 443, ../../../app/assets/stylesheets/grid.scss */
+/* line 444, ../../../app/assets/stylesheets/grid.scss */
 .meeting-room-right {
   display: inline;
   float: left;
@@ -843,19 +844,19 @@ footer, header, hgroup, menu, nav, section {
   padding-right: 480px;
 }
 
-/* line 450, ../../../app/assets/stylesheets/grid.scss */
+/* line 451, ../../../app/assets/stylesheets/grid.scss */
 a {
   text-decoration: none;
   color: #444;
 }
 
-/* line 455, ../../../app/assets/stylesheets/grid.scss */
+/* line 456, ../../../app/assets/stylesheets/grid.scss */
 a:hover {
   color: #fff;
   background-color: #000;
 }
 
-/* line 460, ../../../app/assets/stylesheets/grid.scss */
+/* line 461, ../../../app/assets/stylesheets/grid.scss */
 .slim-box {
   background-color: #fff;
   margin-top: 36px;
@@ -866,29 +867,29 @@ a:hover {
   width: 460px;
   min-height: 80px;
 }
-/* line 465, ../../../app/assets/stylesheets/grid.scss */
+/* line 466, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .borders {
   border-style: solid;
   border-width: 1px;
   height: 80px;
   display: block;
 }
-/* line 471, ../../../app/assets/stylesheets/grid.scss */
+/* line 472, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 474, ../../../app/assets/stylesheets/grid.scss */
+/* line 475, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a {
   color: #fff;
 }
-/* line 475, ../../../app/assets/stylesheets/grid.scss */
+/* line 476, ../../../app/assets/stylesheets/grid.scss */
 .slim-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
 
-/* line 479, ../../../app/assets/stylesheets/grid.scss */
+/* line 480, ../../../app/assets/stylesheets/grid.scss */
 .googlemap {
   display: inline;
   float: left;
@@ -901,14 +902,14 @@ a:hover {
   width: 940px;
   display: block;
 }
-/* line 487, ../../../app/assets/stylesheets/grid.scss */
+/* line 488, ../../../app/assets/stylesheets/grid.scss */
 .googlemap .borders {
   border-style: solid;
   border-width: 1px;
   height: 600px;
 }
 
-/* line 494, ../../../app/assets/stylesheets/grid.scss */
+/* line 495, ../../../app/assets/stylesheets/grid.scss */
 .company-index {
   width: 110px;
   height: 60px;
@@ -918,7 +919,7 @@ a:hover {
   margin-right: 10px;
   margin-top: 8px;
 }
-/* line 503, ../../../app/assets/stylesheets/grid.scss */
+/* line 504, ../../../app/assets/stylesheets/grid.scss */
 .company-index .image {
   border-style: solid;
   border-width: 1px;
@@ -929,7 +930,7 @@ a:hover {
   margin: 1px 10px 1px 1px;
 }
 
-/* line 514, ../../../app/assets/stylesheets/grid.scss */
+/* line 515, ../../../app/assets/stylesheets/grid.scss */
 .fullpage {
   display: inline;
   float: left;
@@ -938,7 +939,7 @@ a:hover {
   width: 940px;
 }
 
-/* line 518, ../../../app/assets/stylesheets/grid.scss */
+/* line 519, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box {
   float: right;
   text-align: center;
@@ -953,7 +954,7 @@ a:hover {
   /* IE's opacity*/
   opacity: 0.8;
 }
-/* line 531, ../../../app/assets/stylesheets/grid.scss */
+/* line 532, ../../../app/assets/stylesheets/grid.scss */
 .tlf-box .tlf-content {
   position: relative;
   top: 10px;
@@ -963,7 +964,7 @@ a:hover {
   height: 40px;
 }
 
-/* line 541, ../../../app/assets/stylesheets/grid.scss */
+/* line 542, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row {
   display: inline;
   float: left;
@@ -974,21 +975,21 @@ a:hover {
   margin-right: 0;
   margin-right: 6px;
 }
-/* line 547, ../../../app/assets/stylesheets/grid.scss */
+/* line 548, ../../../app/assets/stylesheets/grid.scss */
 .calendar-row .booking-back {
   padding: 4px;
   background-color: #999;
   margin: 6px;
 }
 
-/* line 556, ../../../app/assets/stylesheets/grid.scss */
+/* line 557, ../../../app/assets/stylesheets/grid.scss */
 .booking-meetingroom-column {
   float: left;
   margin: 2px;
   width: 134px;
 }
 
-/* line 562, ../../../app/assets/stylesheets/grid.scss */
+/* line 563, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 {
   min-height: 500px;
   display: inline;
@@ -998,7 +999,7 @@ a:hover {
   width: 940px;
   margin-top: 24px;
 }
-/* line 566, ../../../app/assets/stylesheets/grid.scss */
+/* line 567, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .left-column {
   display: inline;
   float: left;
@@ -1007,7 +1008,7 @@ a:hover {
   width: 220px;
   margin-left: 0;
 }
-/* line 570, ../../../app/assets/stylesheets/grid.scss */
+/* line 571, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column1 {
   display: inline;
   float: left;
@@ -1015,7 +1016,7 @@ a:hover {
   margin-right: 10px;
   width: 60px;
 }
-/* line 573, ../../../app/assets/stylesheets/grid.scss */
+/* line 574, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column2 {
   display: inline;
   float: left;
@@ -1023,7 +1024,7 @@ a:hover {
   margin-right: 10px;
   width: 140px;
 }
-/* line 576, ../../../app/assets/stylesheets/grid.scss */
+/* line 577, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .center-column3 {
   display: inline;
   float: left;
@@ -1031,7 +1032,7 @@ a:hover {
   margin-right: 10px;
   width: 220px;
 }
-/* line 579, ../../../app/assets/stylesheets/grid.scss */
+/* line 580, ../../../app/assets/stylesheets/grid.scss */
 #columns-3-2-2-1-2 .right-column {
   display: inline;
   float: left;
@@ -1042,19 +1043,19 @@ a:hover {
   padding-right: 80px;
 }
 
-/* line 586, ../../../app/assets/stylesheets/grid.scss */
+/* line 587, ../../../app/assets/stylesheets/grid.scss */
 .bookings-calendar {
   margin-top: 10px;
   margin-left: 10px;
   text-align: center;
 }
 
-/* line 592, ../../../app/assets/stylesheets/grid.scss */
+/* line 593, ../../../app/assets/stylesheets/grid.scss */
 .top_margin {
   margin-top: 8px;
 }
 
-/* line 594, ../../../app/assets/stylesheets/grid.scss */
+/* line 595, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1066,41 +1067,41 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 600, ../../../app/assets/stylesheets/grid.scss */
+/* line 601, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 607, ../../../app/assets/stylesheets/grid.scss */
+/* line 608, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .content .content-top {
   height: 280px;
 }
-/* line 609, ../../../app/assets/stylesheets/grid.scss */
+/* line 610, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .text-right {
   text-align: right;
 }
-/* line 612, ../../../app/assets/stylesheets/grid.scss */
+/* line 613, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 615, ../../../app/assets/stylesheets/grid.scss */
+/* line 616, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a {
   color: #fff;
 }
-/* line 616, ../../../app/assets/stylesheets/grid.scss */
+/* line 617, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 618, ../../../app/assets/stylesheets/grid.scss */
+/* line 619, ../../../app/assets/stylesheets/grid.scss */
 .thumb-box .image-box {
   height: 376px;
 }
 
-/* line 623, ../../../app/assets/stylesheets/grid.scss */
+/* line 624, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box {
   background-color: #fff;
   margin-top: 36px;
@@ -1112,36 +1113,36 @@ a:hover {
   min-height: 376px;
   display: block;
 }
-/* line 629, ../../../app/assets/stylesheets/grid.scss */
+/* line 630, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .borders {
   border-style: solid;
   border-width: 1px;
   min-height: 376px;
   display: block;
 }
-/* line 636, ../../../app/assets/stylesheets/grid.scss */
+/* line 637, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .content .content-top {
   height: 280px;
 }
-/* line 638, ../../../app/assets/stylesheets/grid.scss */
+/* line 639, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .text-right {
   text-align: right;
 }
-/* line 641, ../../../app/assets/stylesheets/grid.scss */
+/* line 642, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box {
   width: 400px;
   height: 51px;
 }
-/* line 644, ../../../app/assets/stylesheets/grid.scss */
+/* line 645, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a {
   color: #fff;
 }
-/* line 645, ../../../app/assets/stylesheets/grid.scss */
+/* line 646, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .menu-box a:hover {
   color: #000;
   background-color: #fff;
 }
-/* line 647, ../../../app/assets/stylesheets/grid.scss */
+/* line 648, ../../../app/assets/stylesheets/grid.scss */
 .gallery-box .image-box {
   height: 376px;
 }
