--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -324,8 +324,8 @@ $ninesixty-gutter-width: 20px; // default: 20px
 		float:right;
 		text-align:center;
 		background-color:#fff;
-		position:relative;
-		top:-100px;
+	/*	position:relative;
+		top:-100px;*/
 		border-style:solid;
 		border-right-style:none;
 		border-width:1px;
