--- a/public/stylesheets/compiled/grid.css
+++ b/public/stylesheets/compiled/grid.css
@@ -669,8 +669,8 @@ footer, header, hgroup, menu, nav, section {
   float: right;
   text-align: center;
   background-color: #fff;
-  position: relative;
-  top: -100px;
+  /*	position:relative;
+  	top:-100px;*/
   border-style: solid;
   border-right-style: none;
   border-width: 1px;
